@@ -6,36 +6,44 @@
 
     <groupId>com.clevertap.apns</groupId>
     <artifactId>apns-http2</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.3-incubator-java10</version>
 
     <name>apns-http2</name>
     <description>A library for communicating with the Apple Push Gateway in HTTP/2.</description>
     <url>https://github.com/CleverTap/apns-http2</url>
 
     <dependencies>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.7.0</version>
+            <version>2.9.6</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.1.4</version>
+            <version>2.9.6</version>
         </dependency>
 
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.11</version>
+            <version>1.4</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.2.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.squareup.okhttp3</groupId>-->
+            <!--<artifactId>okhttp</artifactId>-->
+            <!--<version>3.2.0</version>-->
+        <!--</dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-alpn-java-client -->
+        <!--<dependency>-->
+            <!--<groupId>org.eclipse.jetty</groupId>-->
+            <!--<artifactId>jetty-alpn-java-client</artifactId>-->
+            <!--<version>9.4.12.v20180830</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>junit</groupId>
@@ -50,9 +58,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>10</source>
+                    <target>10</target>
+                    <compilerArgs>
+                        <!--<arg>&#45;&#45;add-opens</arg>-->
+                        <!--<arg>jdk.incubator.httpclient/jdk.incubator.http=ALL-UNNAMED</arg>-->
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.httpclient</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -68,35 +83,35 @@
                     </execution>
                   </executions>
             </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-javadoc-plugin</artifactId>
-              <version>2.7</version>
-              <executions>
-                <execution>
-                  <id>attach-javadocs</id>
-                  <goals>
-                    <goal>jar</goal>
-                  </goals>
-                </execution>
-              </executions>
-            </plugin>
+            <!--<plugin>-->
+              <!--<groupId>org.apache.maven.plugins</groupId>-->
+              <!--<artifactId>maven-javadoc-plugin</artifactId>-->
+              <!--<version>2.7</version>-->
+              <!--<executions>-->
+                <!--<execution>-->
+                  <!--<id>attach-javadocs</id>-->
+                  <!--<goals>-->
+                    <!--<goal>jar</goal>-->
+                  <!--</goals>-->
+                <!--</execution>-->
+              <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
-    <distributionManagement>
-        <repository>
-            <id>bintray-clevertap-Maven</id>
-            <name>clevertap-Maven</name>
-            <url>https://api.bintray.com/maven/clevertap/Maven/apns-http2/;publish=1</url>
-        </repository>
-    </distributionManagement>
+    <!--<distributionManagement>-->
+        <!--<repository>-->
+            <!--<id>bintray-clevertap-Maven</id>-->
+            <!--<name>clevertap-Maven</name>-->
+            <!--<url>https://api.bintray.com/maven/clevertap/Maven/apns-http2/;publish=1</url>-->
+        <!--</repository>-->
+    <!--</distributionManagement>-->
 
-    <scm>
-        <connection>scm:git:git://github.com/CleverTap/apns-http2.git</connection>
-        <developerConnection>scm:git:ssh://github.com:CleverTap/apns-http2.git</developerConnection>
-        <url>http://github.com/CleverTap/apns-http2/tree/master</url>
-    </scm>
+    <!--<scm>-->
+        <!--<connection>scm:git:git://github.com/CleverTap/apns-http2.git</connection>-->
+        <!--<developerConnection>scm:git:ssh://github.com:CleverTap/apns-http2.git</developerConnection>-->
+        <!--<url>http://github.com/CleverTap/apns-http2/tree/master</url>-->
+    <!--</scm>-->
 
     <developers>
         <developer>
@@ -104,6 +119,11 @@
             <email>jude@clevertap.com</email>
             <organization>CleverTap</organization>
             <organizationUrl>https://clevertap.com</organizationUrl>
+        </developer>
+        <developer>
+            <name>Maciej Radziński</name>
+            <email>maciej.radzinski@idemia.com</email>
+            <organization>Idemia</organization>
         </developer>
     </developers>
 
